--- a/VerbannteAutoren/Base.lproj/Main.storyboard
+++ b/VerbannteAutoren/Base.lproj/Main.storyboard
@@ -224,16 +224,20 @@
                                 <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                                 <subviews>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Verbannte Werke" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fsI-Vv-K74">
-                                        <rect key="frame" x="20" y="22" width="131" height="21"/>
+                                        <rect key="frame" x="20" y="193" width="131" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" usesAttributedText="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQm-DC-v7w">
-                                        <rect key="frame" x="20" y="51" width="280" height="68"/>
-                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" usesAttributedText="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQm-DC-v7w">
+                                        <rect key="frame" x="20" y="222" width="280" height="119"/>
+                                        <color key="backgroundColor" red="0.31796077806122447" green="0.31796077806122447" blue="0.31796077806122447" alpha="1" colorSpace="calibratedRGB"/>
                                         <attributedString key="attributedText"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4Ug-wY-hCw">
+                                        <rect key="frame" x="40" y="44" width="92" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
                                 </subviews>
                             </scrollView>
                         </subviews>
@@ -241,6 +245,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Autor" id="gt9-9N-9si"/>
                     <connections>
+                        <outlet property="authorImageView" destination="4Ug-wY-hCw" id="say-n0-yHd"/>
                         <outlet property="worksTextView" destination="BQm-DC-v7w" id="Je8-ZS-uwO"/>
                     </connections>
                 </viewController>
