--- a/VerbannteAutoren/Base.lproj/Main.storyboard
+++ b/VerbannteAutoren/Base.lproj/Main.storyboard
@@ -158,7 +158,7 @@
         <!--Authors View Controller - Verbotene Autoren-->
         <scene sceneID="pL1-Ek-dsE">
             <objects>
-                <viewController id="5I4-68-4nm" customClass="VAUAuthorsViewController" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="5I4-68-4nm" customClass="VAUAuthorsViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="oy0-DL-A14"/>
                         <viewControllerLayoutGuide type="bottom" id="Tia-QI-NPe"/>
@@ -167,16 +167,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vJP-yd-wTH">
-                                <rect key="frame" x="0.0" y="65" width="320" height="44"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="YXl-tz-FqK">
-                                <rect key="frame" x="0.0" y="111" width="320" height="319"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" keyboardDismissMode="interactive" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="YXl-tz-FqK">
+                                <rect key="frame" x="0.0" y="65" width="320" height="365"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="HS1-Gz-PdD">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="AuthorCell" id="Wzx-bC-K52">
-                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="66" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="authorCell" tableViewCell="Wzx-bC-K52" id="bxg-m0-Ljh">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
@@ -195,7 +196,7 @@
                     <navigationItem key="navigationItem" title="Verbotene Autoren" id="QwG-E5-xlK"/>
                     <connections>
                         <outlet property="authorsTable" destination="YXl-tz-FqK" id="RRK-a9-EQA"/>
-                        <outlet property="searchbar" destination="vJP-yd-wTH" id="c4a-Zw-wuW"/>
+                        <outlet property="searchbar" destination="HS1-Gz-PdD" id="yvq-tH-OdT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dWi-Ul-W0y" userLabel="First Responder" sceneMemberID="firstResponder"/>
